# interactive-energy-digital-twin-carla

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
aas-model/: _build_and_validate.sh  _run_validate.sh  _validate.py  package_aasx.py  vehicle-digitaltwin.aas.xml  vehicle-digitaltwin.aasx
basyx-setup/: docker-compose.yml
basyx-setup/aas/: energy-vehicle-dt.aasx
carla/: README.md  download-carla.ps1  run-acquisition.ps1  start-carla.ps1
config/: .env.dev  .env.example
deploy/: docker-compose.yml
docker/: backend.Dockerfile
docs/: architecture.md  energy_model.md  roadmap.md  telemetry.md
docs/technical_report/: architecture.md  referencias.bib  relatorio-digital-twin-energetico.tex
scripts/: build_report.sh  deploy.sh  deploy_docker.sh  run_carla.sh  run_tests.sh  simulate.py  smoke_pipeline.py  validate.py  verify_stack.py
src/: acquisition_main.py  exceptions.py  lora_main.py  main.py  manual_control_energy.py  opcua_main.py  processing_main.py  twin_main.py
src/api/: server.py
src/application/: acquisition_service.py  energy_service.py  lora_service.py  opcua_service.py  ports.py  processing_service.py  twin_service.py  twin_sync_service.py
src/domain/: aas_model.py  battery.py  diagnostics.py  dtos.py  energy_hud.py  energy_model.py  vehicle_energy_system.py
src/infra/: carla_client.py  config.py  keyboard_control.py  logger.py  lora_link.py  messages.py  mqtt_client.py  sources.py  timescale_repository.py
telemetry-setup/: docker-compose.yml
tests/: fakes.py  test_aas_model.py  test_acquisition_service.py  test_battery.py  test_config.py  test_diagnostics.py  test_dtos.py  test_energy_model.py  test_exceptions.py  test_lora_service.py  test_ports.py  test_processing_service.py  test_sources.py  test_twin_sync_service.py  test_vehicle_energy_system.py
