[tool.poetry]
name = "marchforce-telemetry"
version = "0.2.0"
description = "MarchForce telemetry pipeline"
authors = ["MarchForce"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pydantic = ">=2.0"
structlog = ">=23.0"
requests = ">=2.28"
paho-mqtt = ">=2.0"
"psycopg[binary]" = ">=3.1"
fastapi = ">=0.110"
"uvicorn[standard]" = ">=0.29"
python-dotenv = ">=1.0"
pyserial = ">=3.5"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-cov = ">=3.0"

[tool.poetry.group.carla]
optional = true

[tool.poetry.group.carla.dependencies]
carla = "0.9.16"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q --strict-markers"

[tool.coverage.run]
source = ["src"]
omit = ["src/infra/carla_client.py", "src/*_main.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Pyflakes (F), pycodestyle (E/W), isort (I), bugbear (B), pyupgrade (UP)
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # line length handled by formatter, not blocking

[tool.pylint.main]
ignore-paths = ["^src/infra/carla_client.py$"]

[tool.pylint."messages control"]
# Project conventions: structlog-style logging and small data classes.
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "logging-fstring-interpolation",
    "duplicate-code",
]

[tool.pylint.format]
max-line-length = 100

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "poetry"
tag_format = "v$version"
major_version_zero = true
update_changelog_on_bump = true
